terraform/rds.tf
resource "aws_db_instance" "rds" {
  db_name                      = var.rds_database_name
  identifier                   = "rds-${var.projectName}"
  engine                       = var.engineRds
  engine_version               = var.engineRdsVersion
  username                     = var.rds_user_name
  password                     = var.rds_password
  instance_class               = var.instanceClass
  storage_type                 = var.storageType
  allocated_storage            = var.minStorage
  max_allocated_storage        = var.maxStorage
  multi_az                     = false
  vpc_security_group_ids       = [aws_security_group.sg-rds.id]
  db_subnet_group_name         = aws_db_subnet_group.subnet-rds.id
  apply_immediately            = true
  skip_final_snapshot          = true
  publicly_accessible          = false
  deletion_protection          = false
  performance_insights_enabled = true
  copy_tags_to_snapshot        = true
  delete_automated_backups     = true

  tags = {
    Name = "PostechPostgresDB"
  }
}
